syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "PixKeymanagerGrpc";
option objc_class_prefix = "HLW";

import "google/protobuf/timestamp.proto";


package br.com.zup.grpc;

service PixKeymanagerRegistraGrpcService {
  rpc adicionar (PixRequest) returns (PixResponse) {}
}


service PixKeyManagerRemoveGrpcService {
  rpc deletar (RemovePixRequest) returns (RemovePixResponse);
}

service PixKeyManagerConsultaService {
  rpc consultar (ConsultaPixRequest) returns (ConsultaPixResponse);
}


service PixKeyManagerListaService {
  rpc listar (ListaPixRequest) returns (ListaPixResponse);
}


enum TipoChave{
  CHAVE_DEFAULT = 0;
  CPF=1;
  CELULAR = 2;
  EMAIL=3;
  ALEATORIA=4;
}


enum TipoConta {
  CONTA_DEFAULT=0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

enum TipoPessoa{
  PESSOA_DEFAULT=0;
  NATURAL_PERSON = 1;
  LEGAL_PERSON = 2;
}

message PixRequest {

  string id = 1;
  string chave = 2;
  TipoConta tipoConta = 3;
  TipoChave tipoChave = 4;
  TipoPessoa tipoPessoa = 5;

}

message PixResponse {
  string id = 1;
}


message RemovePixRequest {
  string pixId = 1;
  string clienteId = 2;
}

message RemovePixResponse{
  string pixId = 1;
  string clienteId = 2;
}

message ConsultaPixRequest{
 message FiltroPixPorId {
   string clienteId = 1;
   string pixId = 2;
 }

 oneof filtro{
   FiltroPixPorId pixId=1;
   string chave = 2;
 }
}


message ConsultaPixResponse {
 message ChavePix {

   message DadosConta{
     string instituicao = 1;
     string agencia = 2;
     string numero = 3;
     TipoConta tipoConta = 4;
     string nome = 5;
     string cpf = 6;
   }
   TipoChave tipoChave = 1;
   string chave = 2;
   DadosConta dadosConta = 3;
   google.protobuf.Timestamp criadaEm = 4;

 }

 string pixId = 1;
 string clienteId = 2;
 ChavePix chave = 3;

}


message ListaPixRequest {
  string clienteId=1;
}

message ListaPixResponse{

  message Chave{
    string pixId = 1;
    TipoChave tipoChave = 2;
    string chave = 3;
    TipoConta tipoConta = 4;
    google.protobuf.Timestamp criadaEm = 5;
  }


  string clienteId = 1;
  repeated Chave chaves = 2;
}



